environment/blade/overlay/baseline/gloo-dex-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: dex
  namespace: gloo-system
spec:
  displayName: dex
  sslConfig:
    secretRef:
      name: dex
      namespace: gloo-system
    sniDomains:
    - dex.jad.solo.io
  virtualHost:
    domains:
    - dex.jad.solo.io
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: dex-dex-5556
            namespace: gloo-system
